--- a/clubProject/app/src/main/res/xml/settings_frag.xml
+++ b/clubProject/app/src/main/res/xml/settings_frag.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <PreferenceCategory
-        android:title="Username and Email"
         android:layout_width="match_parent">
         <EditTextPreference
             android:key="reg_pass"
@@ -12,10 +11,9 @@
             android:defaultValue=""
             android:dialogTitle="Enter your new password: " />
         <EditTextPreference
-            android:key="reg_email"
+            android:key="edit_email"
             android:title="Configure Email"
             android:summary="Change your email address here."
-            android:defaultValue="your@email.com"
             android:dialogTitle="Enter your new email here: "/>
     </PreferenceCategory>
 </PreferenceScreen>
