--- a/clubProject/app/src/main/res/layout/club_layout.xml
+++ b/clubProject/app/src/main/res/layout/club_layout.xml
@@ -69,8 +69,8 @@
                     android:layout_weight="14">
 
                     <ImageButton
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="64px"
+                        android:layout_height="64px"
                         android:id="@+id/join_button"
                         android:background="@drawable/accept"
                         android:layout_weight="1" />
@@ -80,8 +80,8 @@
                         android:layout_height="40px" />
 
                     <ImageButton
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="64px"
+                        android:layout_height="64px"
                         android:id="@+id/leave_button"
                         android:background="@drawable/deny"
                         android:layout_weight="1" />
