--- a/clubProject/app/src/main/res/menu/club_manager_main.xml
+++ b/clubProject/app/src/main/res/menu/club_manager_main.xml
@@ -10,8 +10,8 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
-    <item android:id="@+id/action_report"
-        android:title="@string/report_label"
-        android:orderInCategory="100"
-        app:showAsAction="never"/>
+    <!--<item android:id="@+id/action_report"-->
+        <!--android:title="@string/report_label"-->
+        <!--android:orderInCategory="100"-->
+        <!--app:showAsAction="never"/>-->
 </menu>
