--- a/clubProject/app/src/main/res/layout/user_profile.xml
+++ b/clubProject/app/src/main/res/layout/user_profile.xml
@@ -59,12 +59,12 @@
                     android:id="@+id/userpro_classStanding"
                     android:layout_weight="1" />
 
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:text="Age: "-->
-                    <!--android:id="@+id/userpro_age"-->
-                    <!--android:layout_weight="1" />-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Main Club: "
+                    android:id="@+id/userpro_mainclub"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -111,7 +111,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/userpro_biotext"
-                    android:text="No information entered." />
+                    android:text="Update information in settings..." />
             </FrameLayout>
 
         </LinearLayout>
