fixed user profile. listing users joined clubs in myFeed. Events still not active.

--- a/clubProject/app/src/main/res/layout/cal_event.xml
+++ b/clubProject/app/src/main/res/layout/cal_event.xml
@@ -4,10 +4,39 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Events for the Day"
-        android:id="@+id/cal_textView" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Events for the Day"
+            android:id="@+id/cal_textView"
+            android:layout_gravity="center_horizontal" />
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/userEventlistView" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:layout_weight="10">
+
+        <Button
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:text="Add Event"
+            android:id="@+id/addEvent_button"
+            android:layout_gravity="bottom|center_horizontal" />
+    </LinearLayout>
+
 </LinearLayout>
