--- a/clubProject/app/src/main/res/layout/myfeed.xml
+++ b/clubProject/app/src/main/res/layout/myfeed.xml
@@ -5,29 +5,17 @@
     android:layout_height="match_parent">
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="myFeed"
+        android:id="@+id/textView"
+        android:layout_gravity="center_horizontal" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/userFeedlistView"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
-
-    <!--    <LinearLayout style="@style/TitleBar">
-        <ImageView style="@style/TitleBarLogo"
-            android:contentDescription="@string/description_logo"
-            android:src="@drawable/s_a_icon"
-            android:id="@+id/s_a_icon" />
-        <ImageButton style="@style/TitleBarAction"
-            android:contentDescription="@string/description_home"
-            android:src="@drawable/title_home_default"
-            android:onClick="onClickHome" />
-        <TextView style="@style/TitleBarText"
-            android:text="@string/title_feature2"
-            android:id="@+id/user_pro_title"/>
-        <ImageButton style="@style/TitleBarAction"
-            android:contentDescription="@string/description_home"
-            android:src="@drawable/settings"
-            android:onClick="onClickFeature"
-            android:id="@+id/settings_button" />
-        <ImageButton style="@style/TitleBarAction"
-            android:contentDescription="@string/description_home"
-            android:src="@drawable/logout"
-            android:onClick="Logout_button"
-            android:id="@+id/logout_button" />
-    </LinearLayout>-->
