--- a/clubProject/app/src/main/res/layout/club_layout.xml
+++ b/clubProject/app/src/main/res/layout/club_layout.xml
@@ -8,8 +8,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="vertical"
@@ -18,10 +17,9 @@
 
             <ImageView
                 android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_height="100dp"
                 android:id="@+id/clubImageView"
-                android:layout_gravity="center_horizontal"
-                />
+                android:layout_gravity="center_horizontal"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -31,66 +29,66 @@
                 android:id="@+id/club_name"
                 android:layout_gravity="center_horizontal" />
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:text="Club Sponsor"
+                android:id="@+id/clubs_sponsor" />
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Club President"
+                android:id="@+id/clubs_president" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Club Sponsor"
-                        android:id="@+id/clubs_sponsor" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Club President"
-                        android:id="@+id/clubs_president" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Club Treasurer"
-                        android:id="@+id/clubs_treasurer" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="14">
-
-                    <ImageButton
-                        android:layout_width="64px"
-                        android:layout_height="64px"
-                        android:id="@+id/join_button"
-                        android:background="@drawable/accept"
-                        android:layout_weight="1" />
-
-                    <Space
-                        android:layout_width="40px"
-                        android:layout_height="40px" />
-
-                    <ImageButton
-                        android:layout_width="64px"
-                        android:layout_height="64px"
-                        android:id="@+id/leave_button"
-                        android:background="@drawable/deny"
-                        android:layout_weight="1" />
-                </LinearLayout>
-            </LinearLayout>
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Club Treasurer"
+                android:id="@+id/clubs_treasurer" />
         </LinearLayout>
 
         <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="14">
+
+            <ImageButton
+                android:layout_width="64px"
+                android:layout_height="64px"
+                android:id="@+id/join_button"
+                android:background="@drawable/accept"
+                android:layout_weight="1" />
+
+            <Space
+                android:layout_width="40px"
+                android:layout_height="40px" />
+
+            <ImageButton
+                android:layout_width="64px"
+                android:layout_height="64px"
+                android:id="@+id/leave_button"
+                android:background="@drawable/deny"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -128,9 +126,6 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="1" />
                 </ScrollView>
-
-            </LinearLayout>
-
         </LinearLayout>
 
         <LinearLayout
@@ -146,19 +141,11 @@
                 android:text="Members:"
                 android:id="@+id/textView2" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="____________________"
-                android:id="@+id/textView4" />
-
             <ListView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/listView"
-                android:layout_weight="1" />
+                android:layout_height="match_parent"
+                android:id="@+id/listView" />
         </LinearLayout>
-
     </LinearLayout>
 
 </LinearLayout>
