--- a/clubProject/app/src/main/res/layout/user_profile.xml
+++ b/clubProject/app/src/main/res/layout/user_profile.xml
@@ -119,8 +119,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -136,7 +135,7 @@
                 android:id="@+id/textView3" />
 
             <ListView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="150dp"
                 android:id="@+id/userClubsListView" />
         </LinearLayout>
